Added unit test for updating a contact and saving it to file