@@ -132,12 +132,21 @@ public class UpdateActionMoveTest {
         updateActionMove.setSearch(searchActionMove);
 
         updateActionMove.updateContactBySurname(contactList);
-        System.out.println(contactList);
+        fileService.write(contactList);
 
-        assertEquals("Michael", contactList.getFirst().getName());
-        assertEquals("Williams", contactList.getFirst().getSurname());
-        assertEquals("France 93A", contactList.getFirst().getAddress());
-        assertEquals("+996 555 555 555", contactList.getFirst().getPhone());
+        assertEquals("Michael", contactList.get(0).getName());
+        assertEquals("Williams", contactList.get(0).getSurname());
+        assertEquals("France 93A", contactList.get(0).getAddress());
+        assertEquals("+996 555 555 555", contactList.get(0).getPhone());
+
+        List<Contact> readContacts = fileService.read();
+
+        assertEquals("Michael", readContacts.get(0).getName());
+        assertEquals("Williams", readContacts.get(0).getSurname());
+        assertEquals("France 93A", readContacts.get(0).getAddress());
+        assertEquals("+996 555 555 555", readContacts.get(0).getPhone());
+
+
     }
 
     @Test
